# gamesdk

docs/: JavascriptSDKSetup.md
gdk/android/: build.bat  settings.gradle
gdk/android/app/: CMakeLists.txt  build.gradle
gdk/android/app/src/main/cpp/: GdkCoreJni.cpp  NetworkJni.cpp
gdk/android/app/src/main/java/com/fearth/gdk/: FearthGdk.java
gdk/android/app/src/main/java/com/fearth/gdk/data/: GdkConfigData.java  LoginRequest.java  LoginResponse.java
gdk/android/app/src/main/java/com/fearth/gdk/defines/: ErrorCode.java
gdk/android/app/src/main/java/com/fearth/gdk/utils/: JsonHelper.java
gdk/cocos-creator/: README.md  package.json
gdk/cocos-creator/assets/fearth-gdk/plugins/: gdk.js
gdk/cocos-creator/assets/fearth-gdk/sample/scenes/: Sample.scene
gdk/cocos-creator/assets/fearth-gdk/sample/scripts/: TestController.ts
gdk/cocos-creator/assets/fearth-gdk/scripts/: FearthGdk.ts
gdk/cocos-creator/assets/fearth-gdk/scripts/data/: GdkConfig.ts  GdkConfigData.ts  LoginData.ts  LoginRequest.ts  LoginResponse.ts
gdk/cocos-creator/assets/fearth-gdk/scripts/defines/: ErrorCode.ts  Event.ts
gdk/cocos-creator/assets/fearth-gdk/scripts/impl/: FearthGdkDummy.ts  FearthGdkIOS.ts
gdk/cocos-creator/assets/fearth-gdk/scripts/interfaces/: FearthGdkAndroid.ts  FearthGdkDummy.ts  FearthGdkIOS.ts  FearthGdkInterface.ts  FearthGdkWeb.ts
gdk/cocos-creator/native/engine/android/: CMakeLists.txt
gdk/cocos-creator/native/engine/android/app/: AndroidManifest.xml  build.gradle
gdk/cocos-creator/native/engine/android/app/libs/: fearth_gdk-debug.aar  fearth_gdk.aar
gdk/cocos-creator/native/engine/android/app/src/com/fearth/gdk/: FearthGdkWrapper.java
gdk/cocos-creator/native/engine/common/: CMakeLists.txt  cocos-version.json
gdk/cocos-creator/native/engine/common/Classes/: FearthGdkWrapper.h  FearthGdkWrapper.mm
gdk/cocos-creator/native/engine/ios/: CMakeLists.txt  FearthGdkWrapper.h  FearthGdkWrapper.mm
gdk/cocos-creator/native/engine/ios/fearth_gdk.framework/: Info.plist  fearth_gdk
gdk/cocos-creator/native/engine/ios/fearth_gdk.framework.dSYM/Contents/: Info.plist
gdk/cocos-creator/native/engine/ios/fearth_gdk.framework.dSYM/Contents/Resources/DWARF/: fearth_gdk
gdk/cocos-creator/native/engine/ios/fearth_gdk.framework/Headers/: FearthGdk.h
gdk/cocos-creator/native/engine/ios/fearth_gdk.framework/_CodeSignature/: CodeResources
gdk/core/: CMakeLists.txt
gdk/core/include/: GdkCore.h  Network.h
gdk/core/src/: GdkCore.cpp  Network.cpp
gdk/ios/: CMakeLists.txt  build.sh  build_debug.sh  build_release.sh  gen_xcode.sh
gdk/ios/include/: FearthGdk.h
gdk/ios/src/: FearthGdk.mm
gdk/javascript/: README.md  package-lock.json  package.json  setup.sh  tsconfig.json  webpack.config.js
gdk/javascript/src/: Gdk.ts  auth.ts  index.ts  network.ts
gdk/javascript/src/data/: GdkConfigData.ts  LoginRequest.ts  LoginResponse.ts  LoginResult.ts
gdk/javascript/src/defines/: ErrorCode.ts
gdk/javascript/src/log/: Logger.ts
sdk/android/app/: CMakeLists.txt  build.gradle
sdk/android/app/src/androidTest/java/com/nes/gamesdk/: ExampleInstrumentedTest.java
sdk/android/app/src/main/: AndroidManifest.xml
sdk/android/app/src/main/cpp/: MathJni.cpp  SdkCoreJni.cpp
sdk/android/app/src/main/java/com/nes/gamesdk/: NinetyEightSdk.java
sdk/android/app/src/main/res/values/: strings.xml  themes.xml
sdk/android/app/src/main/res/values-night/: themes.xml
sdk/android/app/src/test/java/com/nes/gamesdk/: ExampleUnitTest.java
sdk/android/gradle/wrapper/: gradle-wrapper.properties
sdk/core/: CMakeLists.txt
sdk/core/include/: Math.h  SdkCore.h
sdk/core/src/: Math.cpp  SdkCore.cpp
sdk/javascript/: package-lock.json
temp/: IMPORT_IOS_GDK_INTO_COCOS_CREATOR_IOS.md  project.pbxproj.before
